# r_d_cpp_gamedev

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  gitattributes  vcpkg.json
battle_tanks/client/: CMakeLists.txt  battle_tanks.cpp
battle_tanks/client/game_data/atlases/: map_forest_tileset.json
battle_tanks/client/game_data/screens/: game_screen_config.json
battle_tanks/client/headers/: debug_draw.hpp  render_object.hpp
battle_tanks/client/headers/game/: game_session.hpp  sfml_game.hpp
battle_tanks/client/headers/game/entity/: bullet.hpp  game_entities.hpp  game_object.hpp  game_scene.hpp
battle_tanks/client/headers/game/game_objects/: bullet.hpp  bullet_game_object.hpp  forest_map_game_object.hpp  game_object.hpp  game_objects.hpp  game_scene.hpp  player_game_object.hpp
battle_tanks/client/headers/game/game_states/: game_connection_states.hpp
battle_tanks/client/headers/network/: client_connection.hpp
battle_tanks/client/headers/physics/: collision_listener.hpp  game_object_b2d_link.hpp
battle_tanks/client/headers/renderer/: container.hpp  render_object.hpp  render_scene.hpp  renderer.hpp  sprite.hpp  textures.hpp
battle_tanks/client/headers/ui/: game_screen.hpp
battle_tanks/client/headers/utils/: uuid.hpp
battle_tanks/client/network/: connection_service.hpp
battle_tanks/client/sources/: container.cpp  debug_draw.cpp  render_object.cpp
battle_tanks/client/sources/dev/: debug_draw.cpp
battle_tanks/client/sources/game/entity/: bullet.cpp
battle_tanks/client/sources/game/game_objects/: bullet.cpp  bullet_game_object.cpp
battle_tanks/client/sources/renderer/: container.cpp  render_object.cpp
battle_tanks/common_logic/: CMakeLists.txt
battle_tanks/common_logic/headers/data_structures/: ts_deque.hpp
battle_tanks/common_logic/headers/game/: player_action_controller.hpp
battle_tanks/common_logic/headers/game/entity/: bullet_game_object_entity.hpp  game_entity_constants.hpp  game_map_entity.hpp  game_object_entity.hpp  game_object_type.hpp  phy_game_object_entity.hpp  player_game_object_entity.hpp
battle_tanks/common_logic/headers/game/game_objects/: game_object_frame_restorer.hpp  game_object_frame_restorer_packet.hpp
battle_tanks/common_logic/headers/network/: commands.hpp  connection_base.hpp  player_actions.hpp
battle_tanks/common_logic/headers/physics/: collision_listener.hpp  game_object_b2d_link.hpp  physics_body_factory.hpp
battle_tanks/common_logic/headers/utils/: math.hpp  uuid.hpp
battle_tanks/common_logic/sources/util/: uuid.cpp
battle_tanks/server/: CMakeLists.txt  battle_tanks_server.cpp
battle_tanks/server/headers/: game_server.hpp  game_session.hpp
battle_tanks/server/headers/network/: network_server.hpp  server_connection.hpp
hw-utils/: CMakeLists.txt
hw-utils/headers/: arrays.hpp  console.hpp  debug_macroses.hpp
hw-utils/sources/: arrays.cpp  console.cpp
lesson_01/: CMakeLists.txt  lesson_01.cpp
lesson_03/: CMakeLists.txt  lesson_03.cpp
lesson_04/: CMakeLists.txt  lesson_04.cpp
lesson_05/: CMakeLists.txt  lesson_05.cpp
lesson_06/: CMakeLists.txt  lesson_06.cpp
lesson_07/: CMakeLists.txt  lesson_07.cpp
lesson_08/: CMakeLists.txt  lesson_08.cpp
lesson_08/cpp/: console_utils.cpp  cyclic_functions.cpp  recursive_functions.cpp
lesson_08/headers/: console_utils.hpp  cyclic_functions.hpp  recursive_functions.hpp
lesson_09/: CMakeLists.txt  lesson_09.cpp
lesson_09/cpp/: array_utils.cpp
lesson_09/headers/: array_utils.hpp
lesson_10/: CMakeLists.txt  lesson_10.cpp
lesson_10/cpp/: pointers_utils.cpp
lesson_10/headers/: pointers_utils.hpp
lesson_11/: CMakeLists.txt  lesson_11.cpp
lesson_11/cpp/: algorithms_utils.cpp
lesson_11/heades/: algorithms_utils.hpp
lesson_12/: CMakeLists.txt  lesson_12.cpp
lesson_12/headers/: sort_utils.hpp
lesson_12/sources/: sort_utils.cpp
lesson_13/: CMakeLists.txt  lesson_13.cpp
lesson_13/cpp/: common_utils.cpp  file_utils.cpp  game.cpp
lesson_13/data/: daily_words.txt  words.txt
lesson_13/headers/: common_utils.hpp  file_utils.hpp  game.hpp  game_const.hpp
lesson_14/: CMakeLists.txt  lesson_14.cpp
lesson_14/cpp/: student_utils.cpp
lesson_14/headers/: student_utils.hpp
lesson_15/: CMakeLists.txt  lesson_15.cpp
lesson_15/headers/: player.hpp  rectangle.hpp  team.hpp  weapon.hpp
lesson_15/sources/: player.cpp  rectangle.cpp  team.cpp  weapon.cpp
lesson_16/: CMakeLists.txt  lesson_16.cpp
lesson_16/headers/: rectangle.hpp  vector2d.hpp
lesson_16/sources/: rectangle.cpp  vector2d.cpp
lesson_17/: CMakeLists.txt  lesson_17.cpp
lesson_17/headers/: custom_string.hpp  dynamic_int_array.hpp
lesson_17/sources/: dynamic_int_array.cpp
lesson_18/: CMakeLists.txt  lesson_18.cpp
lesson_18/headers/: game_utils.hpp  player.hpp  player_class.hpp  values.hpp  weapon.hpp
lesson_18/sources/: game_utils.cpp  player.cpp  player_class.cpp  values.cpp
lesson_19/: CMakeLists.txt
lesson_19/sources/: HW_exercises.cpp
lesson_20/: CMakeLists.txt
lesson_20/game_data/: items.json  modifiers.json  monsters.json
lesson_20/headers/: AbilityAction.h  Fight.h  Game.h  GameDataLoader.h  Item.h  ItemDeck.h  Modifier.h  ModifierDeck.h  ModifierTarget.h  Monster.h  MonsterDeck.h  MonsterPolicy.h  Munchkin.h  Runaway.h  RunawayType.h  Tribe.h  VictoryPolicy.h  VictoryPolicyType.h
lesson_20/sources/: AbilityAction.cpp  Fight.cpp  Game.cpp  GameDataLoader.cpp  ItemDeck.cpp  ModifierDeck.cpp  ModifierTarget.cpp  MonsterDeck.cpp  Munchkin.cpp  Runaway.cpp  RunawayType.cpp  Tribe.cpp  VictoryPolicy.cpp  VictoryPolicyType.cpp
lesson_21/: CMakeLists.txt  lesson_21.cpp
lesson_21/headers/: HWs.hpp
lesson_22/: CMakeLists.txt  lesson_22.cpp
lesson_23/: CMakeLists.txt  lesson_23.cpp
lesson_24/: CMakeLists.txt  lesson_24.cpp
lesson_24/headers/: Graph.h
lesson_24/sources/: Graph.cpp
lesson_25/: CMakeLists.txt  lesson_25.cpp
lesson_26/: CMakeLists.txt  lesson_26.cpp
lesson_26/headers/: thread_utils.hpp
lesson_26/sources/: thread_utils.cpp
lesson_27/: CMakeLists.txt  lesson_27.cpp
(+13 files in other folders)
