cmake_minimum_required (VERSION 3.20)

project(r_d_cpp_gamedev)

# Enable Hot Reload for MSVC compilers if supported.
if (POLICY CMP0141)
  cmake_policy(SET CMP0141 NEW)
  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    add_definitions(-DDEBUG)
endif()

add_subdirectory ("hw-utils")

add_subdirectory ("lesson_01")
add_subdirectory ("lesson_03")
add_subdirectory ("lesson_04")
add_subdirectory ("lesson_05")
add_subdirectory ("lesson_06")
add_subdirectory ("lesson_07")
add_subdirectory ("lesson_08")
add_subdirectory ("lesson_09")
add_subdirectory ("lesson_10")
add_subdirectory ("lesson_11")
add_subdirectory ("lesson_12")
add_subdirectory ("lesson_13")
add_subdirectory ("lesson_14")
add_subdirectory ("lesson_15")
add_subdirectory ("lesson_16")
add_subdirectory ("lesson_17")
add_subdirectory ("lesson_18")
add_subdirectory ("lesson_19")
add_subdirectory ("lesson_20")
add_subdirectory ("lesson_21")
add_subdirectory ("lesson_22")
add_subdirectory ("lesson_23")
add_subdirectory ("lesson_24")
add_subdirectory ("lesson_25")
add_subdirectory ("lesson_26")
add_subdirectory ("lesson_27")

add_subdirectory ("battle_tanks/common_logic")
add_subdirectory ("battle_tanks/client")
add_subdirectory ("battle_tanks/server")
