project(lesson_13)

file(GLOB_RECURSE SOURCES_CPP "./*.cpp")
file(GLOB_RECURSE SOURCES_HPP "./*.hpp")

add_executable (${PROJECT_NAME}  ${SOURCES_CPP} ${SOURCES_HPP})

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/data DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/save DESTINATION ${CMAKE_CURRENT_BINARY_DIR})

if (CMAKE_VERSION VERSION_GREATER 3.12)
  set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 20)
endif()
